--- a/COMP-140/YogaCastStudy/index.html
+++ b/COMP-140/YogaCastStudy/index.html
@@ -1,29 +1,52 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="yoga.css">
     <title>Path of Light Yoga Studio
     </title>
 </head>
 <body>
 
+<header>
     <h1>Path of Light Yoga Studio</h1>
+</header>
 
+<nav>
     <a href="index.html">Home</a>
     <a href="classes.html">Classes</a>
     <a href="schedule.html">Schedule</a>
     <a href="contact.html">Contact</a>
-
+</nav>
     <h2>Find Your Innner Light</h2>
 
     <p>Path of Light Yoga Studio provbides all levels of yoga practice in a tranquil, peaceful environment.
         Whether you are new to yoga orr an experienced practioner, our dedicated instructors can develop a practice to meet your needs.
         Let your inner light shine at the Path Of Light Yoga Studio.
     </p>
+<ul>
+    <li>Hatham Vinyasa, and Restorative Yoga Classes</li>
+    <li>Drop-ins welcome</li>
+    <li>Mats, blocks and blankets provided</li>
+    <li>Relax in our Serentity Lounge before or after your class</li>
+</ul>
 
-    <li></li>
+<div>
+    Path of Light Yoga Studio
+    <br>612 Serentity Way
+    <br>El Dorado, CA 96162
+    <br>
+    <br>888-555-5555
+</div>
+
+<footer>
+<div> 
+    <small>Copyright © 2016 Path of Light Yoga</small>
+</div>
+</footer>
     
 </body>
 </html>
