--- a/COMP-140/YogaCastStudy/classes.html
+++ b/COMP-140/YogaCastStudy/classes.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="yoga.css">
     <title>Classes</title>
 </head>
 <body>
 
+    <header>
     <h1>Path of Light Yoga Studio</h1>
+    </header>
 
+
+    <nav>
     <b><a href="index.html">Home</a></b>
     <b><a href="classes.html">Classes</a></b>
     <b><a href="schedule.html">Schedule</a></b>
     <b><a href="contact.html">Contact</a></b>
+    </nav>
 
     <h2>Yoga Classes</h2>
 
@@ -38,10 +44,10 @@ students of any level of experience. This practice can be a perfect way to help
 rehabilitate an injury.
 </p>
 
-<div> 
+<div> <footer>
     <small>Copyright © 2016 Path of Light Yoga</small>
-    
 </div>
+</footer>
 
 </body>
 </html>
