--- a/COMP-140/PacificTrail/activites.html
+++ b/COMP-140/PacificTrail/activites.html
@@ -21,8 +21,25 @@
         <a href="activites.html">Activites</a>
     
         <a href="reservations.html">Reservations</a>
-    
         </nav>
+
+        <div class="trailhero">
+            <img src="trail.jpg">
+        </div>
+
+        <h2>Activites at Pacific Trails</h2>
+
+        <h3>Hiking</h3>
+        <p>Pacific Trails Resort has 5 miles of hiking trails and is adjacent to a state park.
+            Go it alone or join one of our guided hikes.
+        </p>
+        <h3>Kayaking</h3>
+        <p>Ocean kayaks are available for guest use.</p>
+        <h3>Bird Watching</h3>
+        <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided 
+            bird-watching trips at sunrise several times a week.
+        </p>
+
 
 
     <footer>
