--- a/COMP-140/PacificTrail/index.html
+++ b/COMP-140/PacificTrail/index.html
@@ -22,6 +22,11 @@
     <a href="reservations.html">Reservations</a>
 
     </nav>
+
+    <div class="homehero">
+        <img src="coast.jpg">
+    </div>
+
     <h2>Enjoy Nature in Luxury</h2>
 
     <p><span>Pacific Trails Resort</span> a special lodging experience on the California North Coast. 
