--- a/COMP-140/PacificTrail/yurts.html
+++ b/COMP-140/PacificTrail/yurts.html
@@ -21,8 +21,11 @@
         <a href="activites.html">Activites</a>
     
         <a href="reservations.html">Reservations</a>
-    
         </nav>
+
+        <div class="yurthero">
+            <img src="yurt.jpg">
+        </div>
 
     <h2>The Yurts at Pacific Trails</h2>
 
