--- a/COMP-140/YogaCastStudy/classes.html
+++ b/COMP-140/YogaCastStudy/classes.html
@@ -8,7 +8,7 @@
     <title>Classes</title>
 </head>
 <body>
-
+    <div id="wrapper">
     <header>
     <h1>Path of Light Yoga Studio</h1>
     </header>
@@ -20,6 +20,10 @@
     <b><a href="schedule.html">Schedule</a></b>
     <b><a href="contact.html">Contact</a></b>
     </nav>
+
+    <div class="hero">
+        <img src="yogamat.jpg">
+    </div>
 
     <h2>Yoga Classes</h2>
 
@@ -48,6 +52,6 @@ rehabilitate an injury.
     <small>Copyright © 2016 Path of Light Yoga</small>
 </div>
 </footer>
-
+</div>
 </body>
 </html>
