--- a/COMP-140/YogaCastStudy/index.html
+++ b/COMP-140/YogaCastStudy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
     </title>
 </head>
 <body>
-
+<div id="wrapper">
 <header>
     <h1>Path of Light Yoga Studio</h1>
 </header>
@@ -21,6 +20,9 @@
     <a href="schedule.html">Schedule</a>
     <a href="contact.html">Contact</a>
 </nav>
+
+<img src="yogadoor.jpg">
+
     <h2>Find Your Innner Light</h2>
 
     <p>Path of Light Yoga Studio provbides all levels of yoga practice in a tranquil, peaceful environment.
@@ -47,6 +49,6 @@
     <small>Copyright © 2016 Path of Light Yoga</small>
 </div>
 </footer>
-    
+</div>
 </body>
 </html>
