--- a/COMP-140/YogaCastStudy/index.html
+++ b/COMP-140/YogaCastStudy/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="yoga.css">
+    <!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+</script>
+<![endif]-->
     <title>Path of Light Yoga Studio
     </title>
 </head>
@@ -15,10 +19,12 @@
 </header>
 
 <nav>
-    <a href="index.html">Home</a>
-    <a href="classes.html">Classes</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="contact.html">Contact</a>
+    <ol>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="classes.html">Classes</a></li>
+    <li><a href="schedule.html">Schedule</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    </ol>
 </nav>
 
 <img src="yogadoor.jpg">
