--- a/COMP-140/PacificTrail/index.html
+++ b/COMP-140/PacificTrail/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pacific.css">
+    <!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+</script>
+<![endif]-->
     <title>Home Page</title>
 </head>
 <body>
@@ -13,14 +17,15 @@
 </header>
 
     <nav>
-    <a href="index.html">Home</a>
+        <li>
+    <ol><a href="index.html">Home</a></ol>
     
-    <a href="yurts.html">Yurts</a>
+    <ol><a href="yurts.html">Yurts</a></ol>
 
-    <a href="activites.html">Activites</a>
+    <ol><a href="activites.html">Activites</a></ol>
 
-    <a href="reservations.html">Reservations</a>
-
+    <ol><a href="reservations.html">Reservations</a></ol>
+        </li>
     </nav>
 
     <div class="homehero">
