--- a/COMP-140/PacificTrail/index.html
+++ b/COMP-140/PacificTrail/index.html
@@ -52,6 +52,8 @@
 
    <p>888-555-5555</p>
 
+   <a id="mobile" href="tel:888-555-5555">888-555-5555</a>
+   <span id="desktop">888-555-5555</span>
    <footer>
 
     <p>@2016 Pacific Trails Resort</p>
