--- a/COMP-140/YogaCaseStudy/classes.html
+++ b/COMP-140/YogaCaseStudy/classes.html
@@ -48,6 +48,18 @@ students of any level of experience. This practice can be a perfect way to help
 rehabilitate an injury.
 </p>
 
+<h2>Relax Anytime with Savasana</h2>
+<p>Prepare yourself with savasana. Lie down on your yoga mat with your arms at your side with
+    palms up. Close your eyes and breathe slowly but deeply. Sink into the mat and let your
+    worries slip away. When you are ready, roll on your side and use your arms to push yourself
+    to a sitting position with crossed legs. Place your hands in a prayer position. Be grateful for
+    all that you have in life. Namaste.”</p>
+
+    <audio controls>
+        <source src="savasana.mp3" type="audio/mp3">
+        <source src="savasana.ogg" type="audio/ogg">
+    </audio>
+
 <div> <footer>
     <small>Copyright © 2016 Path of Light Yoga</small>
 </div>
