--- a/COMP-140/pacifictrailv2/index.html
+++ b/COMP-140/pacifictrailv2/index.html
@@ -26,6 +26,11 @@
     
 <h2>Enjoy Nature in Luxury</h2>
 
+<video width="320" height="240" autoplay>
+    <source src="pacific.mp4" type="video/mp4">
+</video>
+
+
 <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North Coast.
 Relax in serenity with panoramic views of the Pacific Ocean.
 </p>
