--- a/COMP-140/pacifictrailv2/reservations.html
+++ b/COMP-140/pacifictrailv2/reservations.html
@@ -49,7 +49,7 @@
 
         <p><small><i>@2016 Pacific Trails Resort</i></small>
             <br>
-            <a href="yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+            <a href="JosephPobega">Joseph Pobega</a>
         </p>
         
        </footer>
